# src/modules/pedidos/domain/pedido.types.ts
@@ -1,0 +1,10 @@
+export interface PedidoItemInput {
+  produtoId: number;
+  quantidade: number;
+}
+
+export interface PedidoContext {
+  clienteId: number;
+  itens: PedidoItemInput[];
+  produtoAtual?: number;
+}
