# src/modules/pedidos/pedido.routes.ts
@@ -1,0 +1,11 @@
+import { Router } from "express";
+import PedidoWebController from "./pedido.controller";
+
+const router = Router();
+
+/**
+ * Pedido via Web
+ */
+router.post("/web", PedidoWebController.criar);
+
+export default router;
